cabal-version:      2.4
name:               net-evdev
synopsis:           While right-alt is held, intercept keys and send to a remote device.
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         georgefsthomas@gmail.com
author:             George Thomas
extra-source-files: CHANGELOG.md

executable net-evdev
    main-is:
        Main.hs
    hs-source-dirs:
        src
    default-language: Haskell2010
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        ExistentialQuantification
        FlexibleContexts
        GADTs
        LambdaCase
        NoMonomorphismRestriction
        OverloadedLists
        OverloadedStrings
        ScopedTypeVariables
        TypeOperators
        ViewPatterns
    ghc-options:
        -threaded
        -Wall
    build-depends:
        base ^>= 4.14.0.0,
        bytestring ^>= 0.10.10,
        evdev ^>= 2.0.0,
        evdev-streamly ^>= 0.0.1,
        network ^>= 3.1.2,
        optparse-generic ^>= 1.4.3,
        process ^>= 1.6.9,
        split ^>= 0.2.3,
        streamly ^>= 0.7.2,
        time,
